--- a/404.html
+++ b/404.html
@@ -68,6 +68,8 @@ window.onload = function() {
     console.log(asd);
     const raw = decodeURIComponent(location.pathname.substring(1));
     console.log(raw);
+    console.log(findWordIndex(raw.substring(1, 3)));
+    console.log(raw.substring(1, 3));
     asd += decimalToBase62(findWordIndex(raw.substring(1, 3)));
     console.log(asd);
     asd += decimalToBase62(findWordIndex(raw.substring(4, 6)));
