--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ button:hover {
 <a href="https://discord.gg/W65xwPMaQe" target="_blank">제작자와 친구하기(디스코드)</a>
 <script>
 async function generate() {
+    document.getElementById("result").innerText = "로딩 중...";
     const val = document.getElementById("text").value.trim();
     const urlTxt = document.getElementById("urlTxt").value.trim();
     if (!val) return alert("값 넣어주세요.");
@@ -58,7 +59,10 @@ async function generate() {
         const text = await res.text();
 
         document.getElementById("result").innerText = 
-            `입력: ${val}\n결과: ${text}`;
+            `${JSON.parse(text).Status}`;
+        if(JSON.parse(text).Status == "ok") {
+            window.location = `${window.location.origin}/${encodeURIComponent(val)}-`;
+        }
     } catch(e) {
         document.getElementById("result").innerText = "요청 실패 에러" + e;
     }
