--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<title>Slug 테스트</title>
+<title>짧링(짧은링크)</title>
 <style>
 /* https://discord.gg/W65xwPMaQe */
 body {
@@ -42,12 +42,13 @@ button:hover {
 </style>
 </head>
 <body>
-<h2>🔗 shortLink 테스트</h2>
+<h2>짧링(짧은링크)</h2>
 <input id="urlTxt" placeholder="url 입력 https://...">
 <input id="text" placeholder="한글 입력 (1~10자)">
 <button onclick="generate()">➡ 변환</button>
 <div id="result"></div>
-<a href="https://discord.gg/W65xwPMaQe" target="_blank">제작자와 친구하기(디스코드)</a>
+<a href="https://x.com/gwonseungh46097" target="_blank">제작자와 친구하기(X)</a><br><br>
+<a href="https://13ksh.github.io/kshc/" target="_blank">kshc editer을 찾고 계신가요?(클릭하여 kshc editer 가기)</a>
 <script>
 //https://discord.gg/W65xwPMaQe
 async function generate() {
