--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ button:hover {
 </style>
 </head>
 <body>
-<h2>가가 | 링크 줄이기 v1.8</h2>
+<h2>가가 | 한국 전용 링크 줄이기 v1.9</h2>
 <input id="urlTxt" placeholder="url 입력 https://...">
-<input id="text" placeholder="한글, 숫자, '-' 입력 (1~10자)">
+<input id="text" placeholder="한글, 숫자 입력 (1~10자)">
 <button onclick="generate()">➡ 변환</button>
 <div id="result"></div>
 <script>
