--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
+<meta name="google-site-verification" content="5cDgvKzDBO1mJOt_PZJ8eac2CgogUlwDxJ_LRt-BI">
 <title>가가 | 링크 줄이기</title>
 <style>
 body {
