--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="google-site-verification" content="5cDgvKzDBO1mJOt_PZJ8eac2CgogUlwDxJ_LRt-BI">
+<meta name="description" content="링크 줄이는 사이트 가가.kr/지피티 -> chatgpt.com">
+<meta property="og:title" content="가가 - 링크 줄이는 사이트 (완전 무료)">
+<meta property="og:description" content="광고 없음, 회원가입 없음, 링크만 줄이면 됨">
 <title>가가 | 링크 줄이기</title>
 <style>
 body {
