--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ button:hover {
 <h2>가가 | 한국 전용 링크 줄이기 v1.9</h2>
 <input id="urlTxt" placeholder="url 입력 https://...">
 <input id="text" placeholder="한글, 숫자 입력 (1~10자)">
-<button onclick="generate()">➡ 변환</button>
+<button onclick="generate()">➡ 변환</button> <button onclick="window.location='/projects'">제작자가 만든 프로젝트들 보기</button>
 <div id="result"></div>
 <script>
 async function generate() {
